--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,8 @@
-APP_ENV=http://localhost:3333
+APP_URL=http://localhost:3333
 NODE_ENV=development
+
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
